--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password= 11d41F@0031
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+logging.level.root=WARN
+logging.level.com.example.api=TRACE
